--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^1.14.1"
 isort = "^5.13.2"
 black = "^24.10.0"
 drf-spectacular = "^0.28.0"
+django-silk = "^5.3.2"
 
 [build-system]
 requires = ["poetry-core"]
